--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/wintercn/glsl-vue-loader#readme",
   "devDependencies": {
-    "@webpack-cli/serve": "^0.1.8"
+    "@webpack-cli/serve": "^0.1.8",
+    "webpack": "^5.3.2",
+    "webpack-cli": "^4.1.0"
   }
 }
